--- a/helpdesk_ticket_type_default_priority/views/helpdesk_ticket_type_views.xml
+++ b/helpdesk_ticket_type_default_priority/views/helpdesk_ticket_type_views.xml
@@ -4,10 +4,7 @@
     <record id="helpdesk_ticket_type_view_tree" model="ir.ui.view">
         <field name="name">helpdesk.ticket.type.tree</field>
         <field name="model">helpdesk.ticket.type</field>
-        <field
-            name="inherit_id"
-            ref="helpdesk.helpdesk_ticket_type_view_tree"
-        />
+        <field name="inherit_id" ref="helpdesk.helpdesk_ticket_type_view_tree" />
         <field name="arch" type="xml">
             <field name="name" position="after">
                 <field name="default_priority" widget="priority" />
