--- a/osi_multiple_salespersons/views/res_partner_view.xml
+++ b/osi_multiple_salespersons/views/res_partner_view.xml
@@ -1,8 +1,5 @@
 <odoo>
-    <record
-        id="view_partner_form_inherit_osi_multiple_salespersons"
-        model="ir.ui.view"
-    >
+    <record id="view_partner_form_inherit_osi_multiple_salespersons" model="ir.ui.view">
         <field name="name">res.partner.form</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form" />
