--- a/helpdesk_fieldservice/wizard/fsm_order_close_wizard.xml
+++ b/helpdesk_fieldservice/wizard/fsm_order_close_wizard.xml
@@ -22,11 +22,7 @@
                     />
                 </group>
                 <group>
-                    <field
-                        name="resolution"
-                        required="1"
-                        string="Ticket Resolution"
-                    />
+                    <field name="resolution" required="1" string="Ticket Resolution" />
                 </group>
                 <footer>
                     <button
@@ -35,11 +31,7 @@
                         string="Close Ticket"
                         type="object"
                     />
-                    <button
-                        class="btn-default"
-                        special="cancel"
-                        string="Cancel"
-                    />
+                    <button class="btn-default" special="cancel" string="Cancel" />
                 </footer>
             </form>
         </field>
