--- a/osi_analytic_segments/views/account_analytic_line_view.xml
+++ b/osi_analytic_segments/views/account_analytic_line_view.xml
@@ -7,10 +7,7 @@
     <record id="analytic_account_line_form_segments" model="ir.ui.view">
         <field name="name">account.analytic.line.form.segments</field>
         <field name="model">account.analytic.line</field>
-        <field
-            name="inherit_id"
-            ref="analytic.view_account_analytic_line_form"
-        />
+        <field name="inherit_id" ref="analytic.view_account_analytic_line_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='account_id']" position="after">
                 <field
@@ -29,10 +26,7 @@
     <record id="analytic_account_line_tree_segments" model="ir.ui.view">
         <field name="name">account.analytic.line.tree.segments</field>
         <field name="model">account.analytic.line</field>
-        <field
-            name="inherit_id"
-            ref="analytic.view_account_analytic_line_tree"
-        />
+        <field name="inherit_id" ref="analytic.view_account_analytic_line_tree" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='account_id']" position="after">
                 <field
