--- a/osi_analytic_segments_defaults/views/account_analytic_default_view.xml
+++ b/osi_analytic_segments_defaults/views/account_analytic_default_view.xml
@@ -7,10 +7,7 @@
     <record id="view_account_analytic_default_tree_segments" model="ir.ui.view">
         <field name="name">account.analytic.default.tree.segments</field>
         <field name="model">account.analytic.default</field>
-        <field
-            name="inherit_id"
-            ref="account.view_account_analytic_default_tree"
-        />
+        <field name="inherit_id" ref="account.view_account_analytic_default_tree" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='analytic_id']" position="after">
                 <field
@@ -28,10 +25,7 @@
     <record id="view_account_analytic_default_form_segments" model="ir.ui.view">
         <field name="name">account.analytic.default.form.segments</field>
         <field name="model">account.analytic.default</field>
-        <field
-            name="inherit_id"
-            ref="account.view_account_analytic_default_form"
-        />
+        <field name="inherit_id" ref="account.view_account_analytic_default_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='analytic_id']" position="attributes">
                 <attribute name='required'>0</attribute>
