--- a/osi_analytic_segments_stock/views/stock_move.xml
+++ b/osi_analytic_segments_stock/views/stock_move.xml
@@ -33,10 +33,7 @@
                 <field name="analytic_segment_one_id" />
                 <field name="analytic_segment_two_id" />
             </xpath>
-            <xpath
-                expr="//filter[@name='groupby_dest_location_id']"
-                position="after"
-            >
+            <xpath expr="//filter[@name='groupby_dest_location_id']" position="after">
                 <filter
                     string="Segment One"
                     name="segment1"
