--- a/osi_credit_card_reconciliation/views/account_move_line_view.xml
+++ b/osi_credit_card_reconciliation/views/account_move_line_view.xml
@@ -26,10 +26,7 @@
     </record>
 
     <!--- Journal Items Form View -->
-    <record
-        id="view_account_move_line_cc_rec_statement_id_form"
-        model="ir.ui.view"
-    >
+    <record id="view_account_move_line_cc_rec_statement_id_form" model="ir.ui.view">
         <field name="name">account.move.line.cc.rec.statement.id.form</field>
         <field name="model">account.move.line</field>
         <field name="inherit_id" ref="account.view_move_line_form" />
