--- a/osi_crm_project/wizard/crm_task_view.xml
+++ b/osi_crm_project/wizard/crm_task_view.xml
@@ -25,11 +25,7 @@
                         type="object"
                         class="oe_highlight"
                     />
-                    <button
-                        string="Cancel"
-                        class="btn-secondary"
-                        special="cancel"
-                    />
+                    <button string="Cancel" class="btn-secondary" special="cancel" />
                 </footer>
             </form>
         </field>
