--- a/osi_display_incoming_product/views/product_template_view.xml
+++ b/osi_display_incoming_product/views/product_template_view.xml
@@ -5,9 +5,7 @@
         id="product_template_form_view_procurement_button_inherit"
         model="ir.ui.view"
     >
-        <field
-            name="name"
-        >product.template.form.view.procurement.button.inherit</field>
+        <field name="name">product.template.form.view.procurement.button.inherit</field>
         <field name="model">product.template</field>
         <field
             name="inherit_id"
