--- a/osi_display_incoming_product/views/product_views.xml
+++ b/osi_display_incoming_product/views/product_views.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" ?>
 <odoo>
 
-    <record
-        id="product_form_view_procurement_button_inherit"
-        model="ir.ui.view"
-    >
+    <record id="product_form_view_procurement_button_inherit" model="ir.ui.view">
         <field name="name">product.form.view.procurement.button.inherit</field>
         <field name="model">product.product</field>
-        <field
-            name="inherit_id"
-            ref="stock.product_form_view_procurement_button"
-        />
+        <field name="inherit_id" ref="stock.product_form_view_procurement_button" />
         <field name="arch" type="xml">
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button
