--- a/osi_helpdesk_stock/views/helpdesk_ticket.xml
+++ b/osi_helpdesk_stock/views/helpdesk_ticket.xml
@@ -18,11 +18,7 @@
                     attrs="{'invisible': [('delivery_count', '=', 0)]}"
                     groups="base.group_user"
                 >
-                    <field
-                        name="delivery_count"
-                        widget="statinfo"
-                        string="Delivery"
-                    />
+                    <field name="delivery_count" widget="statinfo" string="Delivery" />
                 </button>
             </div>
             <xpath expr="//notebook/page[1]" position="after">
