--- a/osi_multiple_salespersons/views/account_move_view.xml
+++ b/osi_multiple_salespersons/views/account_move_view.xml
@@ -1,26 +1,16 @@
 <odoo>
-    <record
-        id="view_move_tree_inherit_osi_multiple_salespersons"
-        model="ir.ui.view"
-    >
+    <record id="view_move_tree_inherit_osi_multiple_salespersons" model="ir.ui.view">
         <field name="name">account.invoice.tree</field>
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_tree" />
         <field name="arch" type="xml">
             <field name="company_id" position="after">
-                <field
-                    name="sale_user_ids"
-                    widget="many2many_tags"
-                    optional="show"
-                />
+                <field name="sale_user_ids" widget="many2many_tags" optional="show" />
             </field>
         </field>
     </record>
 
-    <record
-        id="view_move_form_inherit_osi_multiple_salespersons"
-        model="ir.ui.view"
-    >
+    <record id="view_move_form_inherit_osi_multiple_salespersons" model="ir.ui.view">
         <field name="name">account.move.form</field>
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form" />
