--- a/osi_payment_method/views/account_move_views.xml
+++ b/osi_payment_method/views/account_move_views.xml
@@ -8,10 +8,7 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_in_invoice_tree" />
         <field name="arch" type="xml">
-            <xpath
-                expr="//tree/field[@name='invoice_date_due']"
-                position="after"
-            >
+            <xpath expr="//tree/field[@name='invoice_date_due']" position="after">
                 <field name="payment_method" />
             </xpath>
         </field>
@@ -22,10 +19,7 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form" />
         <field name="arch" type="xml">
-            <xpath
-                expr="//field[@name='invoice_payment_term_id']"
-                position="after"
-            >
+            <xpath expr="//field[@name='invoice_payment_term_id']" position="after">
                 <field name="payment_method" widget="selection" />
             </xpath>
         </field>
@@ -34,10 +28,7 @@
     <record id="move_form_payment_method_editable" model="ir.ui.view">
         <field name="name">move.form.payment.method.editable</field>
         <field name="model">account.move</field>
-        <field
-            name="inherit_id"
-            ref="osi_payment_method.move_form_payment_method"
-        />
+        <field name="inherit_id" ref="osi_payment_method.move_form_payment_method" />
         <field
             name="groups_id"
             eval="[(6, 0, [ref('account.group_account_user'),ref('account.group_account_manager'),ref('account.group_account_invoice')])]"
