[FIX] Pre-commit errors

--- a/advance_check_void/views/account_payment_view.xml
+++ b/advance_check_void/views/account_payment_view.xml
@@ -24,6 +24,7 @@
             name="inherit_id"
             ref="account_check_printing.view_account_payment_form_inherited"
         />
+        <field name="priority">100</field>
         <field name="arch" type="xml">
             <button name="print_checks" position="attributes">
                 <attribute
