--- a/l10n_us_check_printing_micr/report/print_check.xml
+++ b/l10n_us_check_printing_micr/report/print_check.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <template
-                id="assets_common_micr"
-                name="l10n_us_check_printing_micr pdf assets"
-                inherit_id="web.report_assets_common"
-            >
+        id="assets_common_micr"
+        name="l10n_us_check_printing_micr pdf assets"
+        inherit_id="web.report_assets_common"
+    >
         <xpath expr="." position="inside">
             <link
-                        rel="stylesheet"
-                        type="text/scss"
-                        href="/l10n_us_check_printing_micr/static/src/scss/fonts.scss"
-                    />
+                rel="stylesheet"
+                type="text/scss"
+                href="/l10n_us_check_printing_micr/static/src/scss/fonts.scss"
+            />
             <link
-                        rel="stylesheet"
-                        type="text/scss"
-                        href="/l10n_us_check_printing/static/src/scss/report_check_commons.scss"
-                    />
+                rel="stylesheet"
+                type="text/scss"
+                href="/l10n_us_check_printing/static/src/scss/report_check_commons.scss"
+            />
             <link
-                        rel="stylesheet"
-                        type="text/scss"
-                        href="/l10n_us_check_printing_micr/static/src/scss/report_check_bottom.scss"
-                    />
+                rel="stylesheet"
+                type="text/scss"
+                href="/l10n_us_check_printing_micr/static/src/scss/report_check_bottom.scss"
+            />
             <link
-                        rel="stylesheet"
-                        type="text/scss"
-                        href="/l10n_us_check_printing_micr/static/src/scss/report_check_middle.scss"
-                    />
+                rel="stylesheet"
+                type="text/scss"
+                href="/l10n_us_check_printing_micr/static/src/scss/report_check_middle.scss"
+            />
             <link
-                        rel="stylesheet"
-                        type="text/scss"
-                        href="/l10n_us_check_printing_micr/static/src/scss/report_check_top.scss"
-                    />
+                rel="stylesheet"
+                type="text/scss"
+                href="/l10n_us_check_printing_micr/static/src/scss/report_check_top.scss"
+            />
         </xpath>
     </template>
 
@@ -46,34 +46,54 @@
 
             </div>
             <div class="row ckus_payee_addr_top">
-                <div class="col-4 text-left" t-esc="o.company_id.partner_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], &quot;no_marker&quot;: True}" />
+                <div
+                    class="col-4 text-left"
+                    t-esc="o.company_id.partner_id"
+                    t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], &quot;no_marker&quot;: True}"
+                />
                 <div class="col-1" />
                 <div class="col-5 text-left">
-                            <t t-esc="o.journal_id.bank_id.name"/><br/>
-                            <t t-esc="o.journal_id.bank_id.street"/>,
-                            <t t-esc="o.journal_id.bank_id.city"/><br/>
-                            <t t-esc="o.journal_id.bank_id.state.name"/>
-                            <t t-esc="o.journal_id.bank_id.zip"/><br/>
-                            <t t-esc="o.journal_id.bank_id.country.name"/>
+                            <t t-esc="o.journal_id.bank_id.name" /><br />
+                            <t t-esc="o.journal_id.bank_id.street" />,
+                            <t t-esc="o.journal_id.bank_id.city" /><br />
+                            <t t-esc="o.journal_id.bank_id.state.name" />
+                            <t t-esc="o.journal_id.bank_id.zip" /><br />
+                            <t t-esc="o.journal_id.bank_id.country.name" />
 
                         </div>
-                <div class="col-2"/>
+                <div class="col-2" />
             </div>
             <div class="ckus_amount_in_word" t-esc="page['amount_in_word']" />
-            <div class="ckus_amount_line"><hr class="first" color="black"/></div>
+            <div class="ckus_amount_line"><hr
+                    class="first"
+                    color="black"
+                /></div>
             <div class="ckus_text"><span>US Dollar</span></div>
             <div class="ckus_pay"><span>PAY TO THE ORDER OF</span></div>
             <div class="row ckus_payee_addr">
-                <div class="col-4 text-left" t-esc="page['partner_id']" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], &quot;no_marker&quot;: True}"/>
-                <div t-if="o.journal_id.bank_account_id.signature_180" class="col-8 float-right" t-field="o.journal_id.bank_account_id.signature_180" t-options="{&quot;widget&quot;: &quot;image&quot;, &quot;style&quot;:&quot;float: right;&quot;}"/>
+                <div
+                    class="col-4 text-left"
+                    t-esc="page['partner_id']"
+                    t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;], &quot;no_marker&quot;: True}"
+                />
+                <div
+                    t-if="o.journal_id.bank_account_id.signature_180"
+                    class="col-8 float-right"
+                    t-field="o.journal_id.bank_account_id.signature_180"
+                    t-options="{&quot;widget&quot;: &quot;image&quot;, &quot;style&quot;:&quot;float: right;&quot;}"
+                />
             </div>
             <div class="ckus_sign_line">
-                <hr class="last" color="black"/>
+                <hr class="last" color="black" />
             </div>
             <div class="ckus_number_micr">
-                <span>c</span><span t-esc="page['sequence_number']"/><span>c</span>
-                <span>a</span><span t-esc="o.journal_id.bank_account_id.aba_routing"/><span>a</span>
-                <span t-field="o.journal_id.bank_account_id.acc_number"/><span>c</span>
+                <span>c</span><span t-esc="page['sequence_number']" /><span
+                >c</span>
+                <span>a</span><span
+                    t-esc="o.journal_id.bank_account_id.aba_routing"
+                /><span>a</span>
+                <span t-field="o.journal_id.bank_account_id.acc_number" /><span
+                >c</span>
             </div>
         </div>
     </template>
@@ -89,16 +109,16 @@
                 </div>
                 <div class="col-4 text-right sequence_number">
                     <span t-if="page['sequence_number']">Check No:</span><span
-                                t-if="page['sequence_number']"
-                                t-esc="page['sequence_number']"
-                            />
+                        t-if="page['sequence_number']"
+                        t-esc="page['sequence_number']"
+                    />
                 </div>
             </div>
 
             <table
-                        class="table table-bordered table-sm stub_lines"
-                        t-if="page['stub_lines']"
-                    >
+                class="table table-bordered table-sm stub_lines"
+                t-if="page['stub_lines']"
+            >
                 <thead><tr>
                     <th class="text-left">Due Date</th>
                     <th class="text-left">Description</th>
@@ -110,33 +130,33 @@
                     <t t-foreach="page['stub_lines']" t-as="stub_line">
                         <t t-if="stub_line.get('header')">
                             <tr><th colspan="6"><t
-                                                t-esc="stub_line['name']"
-                                            /></th></tr>
+                                        t-esc="stub_line['name']"
+                                    /></th></tr>
                         </t>
                         <t t-if="not stub_line.get('header')"><tr>
                             <td class="text-left"><t
-                                                t-if="stub_line['due_date']"
-                                                t-esc="stub_line['due_date']"
-                                            /></td>
+                                        t-if="stub_line['due_date']"
+                                        t-esc="stub_line['due_date']"
+                                    /></td>
                             <td
-                                            class="text-left text-truncate"
-                                            style="max-width: 500px;"
-                                        ><t t-esc="stub_line['number']" /></td>
+                                    class="text-left text-truncate"
+                                    style="max-width: 500px;"
+                                ><t t-esc="stub_line['number']" /></td>
                             <td class="text-right"><t
-                                                t-esc="stub_line['amount_total']"
-                                            /></td>
+                                        t-esc="stub_line['amount_total']"
+                                    /></td>
                             <td class="text-right">
                                 <t t-esc="stub_line['amount_residual']" />
                             </td>
                             <td class="text-right"><t
-                                                t-esc="stub_line['amount_paid']"
-                                            /></td>
+                                        t-esc="stub_line['amount_paid']"
+                                    /></td>
                         </tr></t>
                     </t>
                     <tr t-if="page['stub_cropped']"><td
-                                    colspan="6"
-                                    class="text-right"
-                                >...</td></tr>
+                            colspan="6"
+                            class="text-right"
+                        >...</td></tr>
                 </tbody>
             </table>
             <div class="stub_total_amount">Check Amount:
