[ADD] added cost price to model and view

--- a/odoo/src/custom-addons/my_library/views/library_book.xml
+++ b/odoo/src/custom-addons/my_library/views/library_book.xml
@@ -23,10 +23,21 @@
                     <group>
                         <field name="name"/>
                         <field name="author_ids" widget="many2many_tags"/>
+                        <field name="state"/>
+                        <field name="pages"/>
+                        <field name="notes"/>
                     </group>
                     <group>
+                        <field name="short_name"/>
                         <field name="date_release"/>
+                        <field name="date_updated"/>
+                        <field name="cover" widget="image" class="oe_avatar"/>
+                        <field name="reader_rating"/>
+                        <field name="cost_price"/>
                     </group>
+                </group>
+                <group>
+                    <field name="description"/>
                 </group>
             </form>
         </field>
